--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-
-
 :root {
      --main-bg-color: #fff;
      --main-font-family: "Open Sans","Arial" , san-serif;
@@ -32,7 +30,10 @@
 
 *{
      -webkit-box-sizing: border-box;
-             box-sizing: border-box;
+     box-sizing: border-box;
+}
+html {
+     scroll-behavior: smooth;
 }
 body {
      margin: 0;
@@ -41,8 +42,13 @@ body {
 /* start header  */
 
 .site-header {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
      -webkit-box-shadow: 0px 4px 20px #0000001a;
-             box-shadow: 0px 4px 20px #0000001a;
+     box-shadow: 0px 4px 20px #0000001a;
+     background-color: var(--main-bg-color);
      
 }
 .container {
@@ -57,8 +63,8 @@ body {
      display: -ms-flexbox;
      display: flex;
      -webkit-box-align: center;
-         -ms-flex-align: center;
-             align-items: center;
+     -ms-flex-align: center;
+     align-items: center;
 }
 .div-box-link-logo {
      margin-right: auto;
@@ -67,6 +73,7 @@ body {
 .div-box-logo-img {
      width: 58px;
      height: 20px;
+     display: block;
 }
 .div-box-logo-img:hover {
      opacity: 0.8;
@@ -80,8 +87,8 @@ body {
      display: -ms-flexbox;
      display: flex;
      -webkit-box-align: center;
-         -ms-flex-align: center;
-             align-items: center;
+     -ms-flex-align: center;
+     align-items: center;
      
 }
 .site-nav-list {
@@ -89,13 +96,18 @@ body {
      display: -ms-flexbox;
      display: flex;
      -webkit-box-align: center;
-         -ms-flex-align: center;
-             align-items: center;
+     -ms-flex-align: center;
+     align-items: center;
      list-style: none;
      margin-right: 8px;
      
 }
-
+.item {
+     position: relative;
+}
+.item:hover .inner-list {
+     display: block;
+}
 .site-nav-list-item-link {
      padding: 16px;
      font-family: var(--main-font-family);
@@ -137,11 +149,50 @@ body {
      background: #00bafc99;
      
 }
+.inner-list {
+     display: none;
+     position: absolute;
+     top: 39px;
+     left: -14px;
+     width: 125px;
+     margin: 0;
+     padding: 0;
+     background: #FFFFFF;
+     box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+     border-radius: 5px;
+     list-style: none;
+     background-color: var(--main-bg-color);
+}
+.inner-item {
+     padding: 8px;
+     padding-left: 16px;
+     text-align: left;
+}
+.inner-item:nth-child(5) {
+     margin-bottom: 16px;
+}
+.inner-item:hover {
+     color: var(--main-bg-color);
+     background-color: #00bafc;
+}
+.inner-item:active {
+     color: var(--main-bg-color);
+     background-color: #00bafc;
+     opacity: 0.6;
+}
+.inner-link {
+     font-family: var(--main-font-family);
+     font-weight: var(--main-font-weight-regular);
+     font-size: 16px;
+     line-height: 24px;
+     color: var(--main-color);
+     text-decoration: none;
+}
 /* end site header  */
 
 /* start hero section  */
 .hero {
-     padding-top: 80px;
+     padding-top: 138px;
      padding-bottom: 80px;
 }
 .wrapper {
@@ -149,8 +200,8 @@ body {
      display: -ms-flexbox;
      display: flex;
      -webkit-box-pack: justify;
-         -ms-flex-pack: justify;
-             justify-content: space-between;
+     -ms-flex-pack: justify;
+     justify-content: space-between;
      
 }
 .wrapper-inner {
@@ -236,10 +287,10 @@ body {
      display: -ms-flexbox;
      display: flex;
      -ms-flex-wrap: wrap;
-         flex-wrap: wrap;
+     flex-wrap: wrap;
      -webkit-box-pack: center;
-         -ms-flex-pack: center;
-             justify-content: center;
+     -ms-flex-pack: center;
+     justify-content: center;
      list-style: none;
      margin: 0;
      padding: 0;
@@ -251,7 +302,7 @@ body {
      margin-bottom: 40px;
      padding: 18px 48px;
      -webkit-box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
-             box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
+     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
      border-radius: var(--main-border-radius);
 }
 .service-box-list-item:nth-child(1)::before {
@@ -313,12 +364,12 @@ body {
 }
 .service-box-list-item:hover {
      -webkit-box-shadow: 0px 12px 21px #0000001a;
-             box-shadow: 0px 12px 21px #0000001a;
+     box-shadow: 0px 12px 21px #0000001a;
      border-radius: 5px;
 }
 .service-box-list-item:active {
      -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
-             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
      border-radius: 5px;
      
 }
@@ -415,8 +466,8 @@ body {
      display: -ms-flexbox;
      display: flex;
      -webkit-box-align: center;
-         -ms-flex-align: center;
-             align-items: center;
+     -ms-flex-align: center;
+     align-items: center;
      margin-bottom: 46px;
 }
 .we-work-box-list-item-box {
@@ -430,8 +481,8 @@ body {
      font-size: 20px;
      line-height: 130%;
      -webkit-box-align: center;
-         -ms-flex-align: center;
-             align-items: center;
+     -ms-flex-align: center;
+     align-items: center;
 }
 .we-work-box-list-item-text {
      font-family: var(--main-font-family);
@@ -439,8 +490,8 @@ body {
      font-size: 16px;
      line-height: 24px;
      -webkit-box-align: center;
-         -ms-flex-align: center;
-             align-items: center;
+     -ms-flex-align: center;
+     align-items: center;
 }
 .we-work-box-list-item:nth-child(1)::before {
      display: inline-block;
@@ -495,16 +546,16 @@ body {
 .we-work-box-list-item:nth-child(2n) {
      -webkit-box-orient: horizontal;
      -webkit-box-direction: reverse;
-         -ms-flex-direction: row-reverse;
-             flex-direction: row-reverse;
+     -ms-flex-direction: row-reverse;
+     flex-direction: row-reverse;
 }
 .we-work-inner-box {
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
      -webkit-box-pack: center;
-         -ms-flex-pack: center;
-             justify-content: center;
+     -ms-flex-pack: center;
+     justify-content: center;
 }
 .we-work-box-link {
      padding: 8px 16px;
